# decklist-tracker

./: .gitignore  Cargo.toml  boros_turns.txt
src/: card_getter.rs  collection.rs  craft_suggester.rs  lib.rs  main.rs  mtga_id_translator.rs
tests/: add_deck.rs  add_remove_deck.rs  list_decks.rs
