[package]
name = "decklist-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "4.3.11"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"

[dev-dependencies]
assert_fs = "1.0.13"
