[package]
name = "detr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
clipboard-win = "4.5.0"
directories = "5.0.1"
itertools = "0.11.0"
once_cell = "1.18.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
