[package]
name    = "detr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow        = "1"
clap          = { version = "4", features = ["derive"] }
clipboard-win = "4"
directories   = "5"
either        = "1"
indicatif     = "0.17.7"
itertools     = "0.11.0"
mktemp        = "0.5.1"
regex         = "1"
reqwest       = { version = "0.11.18", features = ["blocking", "json"] }
ron           = "0.8.1"
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

[dev-dependencies]
assert_cmd = "2"
assert_fs  = "1"
